--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.5.3/jspdf.debug.js"></script>
 </head>
 <body>
-    form id="inscricaoForm">
+    <form id="inscricaoForm">
   <label for="nome">Nome:</label>
   <input type="text" id="nome" name="nome"><br><br>
   
@@ -17,9 +17,9 @@
   <input type="text" id="codigo" name="codigo"><br><br>
   
   <button type="button" onclick="gerarCertificado()">Gerar Certificado</button>
-</form>
-
-    <function gerarCertificado() {
+    </form>
+    <script>
+function gerarCertificado() {
   var doc = new jsPDF();
 
   var nome = document.getElementById("nome").value;
@@ -57,6 +57,6 @@
   // Gerar o certificado
   doc.save("Certificado_" + codigoUnico + ".pdf");
 }
-
+    </script>
 </body>
 </html>
