--- a/index.html
+++ b/index.html
@@ -1,68 +1,63 @@
 <!DOCTYPE html>
-<html lang="pt">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Título da página</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.umd.min.js"></script>
-
+  <title>Certificado</title>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.5.3/jspdf.debug.js"></script>
 </head>
-<body><form id="formCertificado">
-  <label for="nome">Nome:</label>
-  <input type="text" id="nome" name="nome"><br><br>
-  
-  <label for="codigo">Código Pessoal:</label>
-  <input type="text" id="codigo" name="codigo"><br><br>
+<body>
+  <!-- Formulário -->
+  <form>
+    <label for="nome">Nome:</label>
+    <input type="text" id="nome"><br>
 
-  <button type="button" onclick="gerarCertificado()">Gerar Certificado</button>
-</form>
+    <label for="codigo">Código Pessoal:</label>
+    <input type="text" id="codigo"><br>
 
-    <script>
-        //function gerarCertificado() {
-  // Pegando os valores do formulário
-  
-  const nome = document.getElementById('nome').value;
-  const codigo = document.getElementById('codigo').value;
-  
-  // Criando um novo documento jsPDF
-  const doc = new jsPDF();
+    <button onclick="gerarCertificado()">Gerar Certificado</button>
+  </form>
 
-  // Definindo as configurações da página, tamanho e margem
-  doc.addPage();
-  doc.setFillColor('#ffd700'); // margem dourada
-  doc.rect(10, 10, 190, 270, 'F'); // retângulo dourado
+  <script>
+    function gerarCertificado() {
+      // Dados do formulário
+      var nome = document.getElementById("nome").value;
+      var codigo = document.getElementById("codigo").value;
 
-  // Adicionando o logo certificado no canto superior esquerdo
-  const img = new Image();
-  img.src = 'caminho_do_logo_certificado.jpg';
-  doc.addImage(img, 'JPEG', 20, 20, 30, 30);
+      // Criação do documento PDF
+      var doc = new jsPDF();
 
-  // Adicionando o texto "Certificamos que"
-  doc.setFontSize(18);
-  doc.text('Certificamos que:', 60, 30);
+      // Configuração de estilo
+      doc.setDrawColor("#D4AF37"); // Cor da margem dourada
+      doc.setLineWidth(20); // Tamanho da margem
 
-  // Adicionando o nome do estudante fornecido no formulário
-  doc.setFontSize(14);
-  doc.text(nome, 20, 60);
+      // Adiciona a margem dourada
+      doc.line(0, 0, 0, doc.internal.pageSize.height); // Margem esquerda
+      doc.line(doc.internal.pageSize.width, 0, doc.internal.pageSize.width, doc.internal.pageSize.height); // Margem direita
 
-  // Adicionando o texto de descrição do curso
-  doc.setFontSize(12);
-  doc.text('Descrição do curso:', 20, 80);
+      // Adiciona o logótipo no canto esquerdo
+      var logo = new Image();
+      logo.src = "caminho_para_logo.png";
+      doc.addImage(logo, "PNG", 20, 20, 50, 50); // Posição e tamanho do logótipo
 
-  // Adicionando a data de emissão
-  doc.text('Data de emissão:', 20, 100);
+      // Adiciona os elementos de texto
+      doc.setFontSize(18);
+      doc.text("Certificamos que", 80, 40);
+      doc.setFontSize(24);
+      doc.text(nome, 80, 65);
+      doc.setFontSize(18);
+      doc.text("concluiu o curso", 80, 90);
+      doc.text("de exemplo", 80, 115);
+      doc.setFontSize(12);
+      doc.text("Data de Emissão: XX/XX/XXXX", 40, 140);
+      doc.text("Duração do Curso: XX horas", 40, 155);
 
-  // Adicionando a duração do curso
-  doc.text('Duração do curso:', 20, 120);
+      // Adiciona o logótipo de assinatura
+      var assinatura = new Image();
+      assinatura.src = "caminho_para_assinatura.png";
+      doc.addImage(assinatura, "PNG", doc.internal.pageSize.width - 100, doc.internal.pageSize.height - 100, 80, 80); // Posição e tamanho da assinatura
 
-  // Adicionando o logo de assinatura
-  const imgAssinatura = new Image();
-  imgAssinatura.src = 'caminho_do_logo_assinatura.jpg';
-  doc.addImage(imgAssinatura, 'JPEG', 20, 140, 30, 30);
-
-  // Salvando o PDF com o nome do estudante e código pessoal
-  doc.save('Certificado_' + nome + '_' + codigo + '.pdf');
-
-
-    </script>
+      // Salva e faz o download do PDF
+      doc.save("certificado.pdf");
+    }
+  </script>
 </body>
 </html>
