--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
       // Adiciona o logótipo no canto esquerdo
       var logo = new Image();
-      logo.src = "caminho_para_logo.png";
+      logo.src = "logo.png";
       doc.addImage(logo, "PNG", 20, 20, 50, 50); // Posição e tamanho do logótipo
 
       // Adiciona os elementos de texto
@@ -52,7 +52,7 @@
 
       // Adiciona o logótipo de assinatura
       var assinatura = new Image();
-      assinatura.src = "caminho_para_assinatura.png";
+      assinatura.src = "assinatura.png";
       doc.addImage(assinatura, "PNG", doc.internal.pageSize.width - 100, doc.internal.pageSize.height - 100, 80, 80); // Posição e tamanho da assinatura
 
       // Salva e faz o download do PDF
