--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
       // Adiciona o logótipo no canto esquerdo
       var logo = new Image();
-      logo.src = "logo.png";
+      logo.src = "logo-oficial.jpg";
       doc.addImage(logo, "PNG", 20, 20, 50, 50); // Posição e tamanho do logótipo
 
       // Adiciona os elementos de texto
