--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
       // Adiciona o logótipo de assinatura
       var assinatura = new Image();
-      assinatura.src = "assinatura.png";
+      assinatura.src = "assinatura.jpg";
       doc.addImage(assinatura, "PNG", doc.internal.pageSize.width - 100, doc.internal.pageSize.height - 100, 80, 80); // Posição e tamanho da assinatura
 
       // Salva e faz o download do PDF
