--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 </div>
                 <div class="modal-body">
                     <h4>Termos e Condições de Participação</h4>
-                    <p>Bem-vindo ao IFPPREPARATORIO, um programa de tutoria online e pago. Ao participar de nossas sessões de tutoria, você concorda com os seguintes termos e condições:</p>
+                    <p>Bem-vindo ao IFPPREPARATORIO, um programa de tutoria online. Ao participar de nossas sessões de tutoria, você concorda com os seguintes termos e condições:</p>
                     <ul>
                         <li><strong>Natureza do Serviço:</strong> As tutoriais são oferecidas online e são pagas. O pagamento deve ser efetuado antes do início das sessões.</li>
                         <li><strong>Comprometimento:</strong> Espera-se que os participantes estejam comprometidos com o aprendizado e compareçam às sessões conforme agendado.</li>
